stack/radarr/deployment-radarr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  labels:
    app: radarr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        dfl.mn/datacentre: mission
      containers:
        - name: radarr
          image: linuxserver/radarr:version-3.0.0.3879
          imagePullPolicy: Always
          ports:
          - containerPort: 7878
          volumeMounts:
          - mountPath: /downloads
            name: downloads
          - mountPath: /config
            name: antfarm
          - mountPath: /movies-a2
            name: movies-a2
          - mountPath: /movies-a3
            name: movies-a3
      volumes:
        - name: downloads
          persistentVolumeClaim:
            claimName: downloads
        - name: antfarm
          persistentVolumeClaim:
            claimName: localfs-radarr
        - name: movies-a2
          persistentVolumeClaim:
            claimName: movies-a2
        - name: movies-a3
          persistentVolumeClaim:
            claimName: movies-a3
