stack/radarr/service-radarr.yaml
kind: Service
apiVersion: v1
metadata:
  name: radarr
spec:
  ports:
  - port: 7878
    protocol: TCP
  selector:
      app: radarr
