stack/radarr/ingress-radarr.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: radarr
  annotations:
    nginx.ingress.kubernetes.io/auth-tls-verify-client: 'on'
    nginx.ingress.kubernetes.io/auth-tls-secret: 'default/radarr'
    ingress.kubernetes.io/ssl-redirect: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - radarr.i.dfl.mn
    secretName: radarr
  rules:
  - host: radarr.i.dfl.mn
    http:
      paths:
      - path: /
        backend:
          serviceName: radarr
          servicePort: 7878
